--- a/gemspec.yml
+++ b/gemspec.yml
@@ -10,6 +10,14 @@ email: postmodern.mod3@gmail.com
 homepage: http://github.com/ronin-ruby/ronin-dorks
 has_yard: true
 
+dependencies:
+  # Ronin dependencies:
+  # ronin-support: ~> 0.1.0
+  # ronin: ~> 0.4.0
+  # ronin-gen: ~> 0.3.0
+  # ronin-exploits: ~> 0.4.0
+  # ronin-scanners: ~> 0.2.0
+
 development_dependencies:
   bundler: ~> 1.0.0
   yard: ~> 0.6.1
